# vast2024

./: README.md
data/: VAST2024 - MC3 Data Description.docx  ~$ST2024 - MC3 Data Description.docx
front/react-app/: README.md  package-lock.json  package.json
front/react-app/src/: App.css  App.tsx  config.ts  dataStore.tsx  layout.tsx  netChart.tsx  selectForm.tsx
front/react-app/src/static/: selectForm.css
server/: pyproject.toml  readme.md
server/src/: main.py
server/src/controller/: datacontroller.py
